# spellcaster-sacrifice

./: Cargo.toml
resources/: assets.json  keybindings.json
resources/maps/: demomap.tmx  tiles.aseprite
resources/raw/: assets.tps  player.aseprite  player64.aseprite  player_right.aseprite  player_up.aseprite
scripts/: copy_resources.sh
src/: loader.rs  main.rs  scene_graph.rs  screen.rs  settings.rs  world.rs
src/assets/: mod.rs  spritesheet.rs  spritesheet_map.rs
src/components/: animation_sheet.rs  camera.rs  entity_lookup.rs  input.rs  mod.rs  node.rs  player.rs  screen_change.rs  shape.rs  sprite.rs  text.rs  transform.rs
src/components/map/: tiled.rs
src/entities/: mod.rs
src/renderer/: mod.rs  tiled.rs
src/screen/: play.rs
src/systems/: animation_system.rs  mod.rs  player_system.rs
