[package]
name = "spellcaster-sacrifice"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
dirs = "1.0.5"
sdl2 = "0.32"
gfx = "0.18.0"
gfx_glyph = "0.14.0"
gfx_window_sdl = "0.9.0"
image = "0.21.0"
lyon_path = "0.13.1"
lyon_tessellation = "0.13.1"
rodio = "0.8.1"
rusttype = "0.7.5"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
specs = "0.14.3"
tiled = { path = "../rs-tiled" }
